# Document-Intelligence-Refinery

./: .dockerignore  .gitignore  DOMAIN_NOTES.md  Dockerfile  FINAL_REPORT.md  PHASE0_WALKTHROUGH.md  README.md  pyproject.toml
.refinery/: extraction_ledger.jsonl  phase0_pdfplumber_analysis.json
.refinery/extractions/: tax_expenditure_ethiopia_2021_22.json
.refinery/ldus/: tax_expenditure_ethiopia_2021_22.json
.refinery/pageindex/: tax_expenditure_ethiopia_2021_22.json
.refinery/profiles/: Audit_Report_-_2023.json  tax_expenditure_ethiopia_2021_22.json
.refinery/vector_db/: chroma.sqlite3
document_intelligence_refinery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rubric/: extraction_rules.yaml
scripts/: demo_protocol.py  phase0_docling_sample.py  phase0_pdfplumber_analysis.py
src/: config.py
src/agents/: __init__.py  audit.py  chunker.py  extractor.py  indexer.py  query_agent.py  query_tools.py  triage.py
src/cli/: extract.py  index.py  query.py  triage.py
src/models/: __init__.py  chunking.py  common.py  document_profile.py  extraction.py  pageindex.py  provenance.py  query_result.py
src/strategies/: __init__.py  base.py  fast_text.py  layout.py  vision.py
tests/: conftest.py  test_chunking.py  test_config.py  test_extraction.py  test_pageindex.py  test_query.py  test_triage.py
